deployment/manual/keycloak/keycloak-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fc-key-server-balancer-service
  namespace: federated-catalogue
  labels:
    app: fc-key-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: fc-key-server
  type: LoadBalancer
